@@ -39,6 +39,8 @@ class JSONCoder extends MessageCoder {
     detect( data ) {
         if ( typeof data === 'string' ) {
             return data.charAt( 0 ) === '{';
+        } else if ( data instanceof ArrayBuffer ) {
+            return ( new Uint8Array( data ) )[0] == 0x7B;
         } else {
             return data[0] === 0x7B;
         }
@@ -49,7 +51,11 @@ class JSONCoder extends MessageCoder {
     }
 
     decode( buffer ) {
-        return JSON.parse( buffer );
+        if ( buffer instanceof ArrayBuffer ) {
+            return JSON.parse( new TextDecoder().decode( buffer ) );
+        }
+
+        return JSON.parse( buffer.toString() );
     }
 
     static register() {
