@@ -225,6 +225,7 @@ class WSComms {
             ctx.native_iface.emit( 'disconnect' );
         };
 
+        ws.binaryType = 'arraybuffer';
         ws.onclose = cleanup;
         ws.onerror = cleanup;
 
