@@ -1,3 +1,6 @@
+=== (next) ===
+FIXED: support binary message support in JSON coder
+
 === 2.4.7 (2021-08-14) ===
 CHANGED: dependency maintenance
 
